--- a/assets/css/scss/custom.scss
+++ b/assets/css/scss/custom.scss
@@ -5,3 +5,11 @@
  */
 
 @import 'include-media';
+
+@import 'scaffolding';
+@import 'font-face';
+@import 'fonts';
+
+@import 'typography';
+@import 'nav';
+@import 'footer';
