--- a/assets/css/scss/custom.scss
+++ b/assets/css/scss/custom.scss
@@ -11,7 +11,10 @@
 @import 'base/fonts';
 
 @import 'components/typography';
+@import 'components/buttons';
 
 @import 'layout/header';
 @import 'layout/nav';
 @import 'layout/footer';
+
+@import 'layout/content';
