--- a/assets/css/scss/components/_typography.scss
+++ b/assets/css/scss/components/_typography.scss
@@ -5,12 +5,11 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-	font-size: 4.4rem;
+	font-size: 44px;
 	font-weight: 900;
 }
 
-h2, .h2 { font-size: 2.4rem; }
-h3, .h3 { font-size: 2rem; }
+h3, .h3 { font-size: 24px; }
 
 h2, h3, h4, h5, h6,
 .h2, .h3, .h4, .h5, .h6 {
