styles: homepage widgets

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,7 +3,7 @@
 
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 { padding-left: 10px; padding-right: 10px; }
 
-body { font-size: 14px; letter-spacing: 0.5px; }
+body { font-size: 14px; letter-spacing: 0.5px; line-height: 1.7; }
 
 @font-face { font-family: 'Avenir'; src: url("../fonts/Avenir-Light.woff2") format("woff2"), url("../fonts/Avenir-Light.woff") format("woff"), url("../fonts/Avenir-Light.ttf") format("truetype"); font-weight: 300; font-style: normal; }
 
@@ -86,6 +86,12 @@ h2, h3, h4, h5, h6, .h2, .h3, .h4, .h5, .h6 { font-weight: normal; }
 
 #home-widgets > .widget:nth-child(even) { margin-left: -999rem; margin-right: -999rem; padding: 10rem 999rem; }
 
+#home-widgets h3, #home-widgets .widget-title { font-size: 24px; margin-bottom: 2.8rem; }
+
+#home-widgets h3:after, #home-widgets .widget-title:after { display: none; }
+
+.content-area, .widget-area { font-weight: 300; }
+
 #home-widgets > .widget .aepo-buttons-wrapper { margin-top: 2.8rem; }
 
 @media (max-width: 767px) { #home-widgets > .widget .aepo-buttons-wrapper .text-left, #home-widgets > .widget .aepo-buttons-wrapper .text-right { text-align: center; }
@@ -127,10 +133,36 @@ h2, h3, h4, h5, h6, .h2, .h3, .h4, .h5, .h6 { font-weight: normal; }
 
 #home-widgets > .widget .aepo-client-apple a { background-image: url(../images/apple_logo@2x.png); background-size: 39px 47px; height: 47px; width: 39px; }
 
-#home-widgets h3, #home-widgets .widget-title { font-size: 24px; margin-bottom: 2.8rem; }
+#home-widgets #lsx-testimonials-slider { margin-top: 7.2rem; }
 
-#home-widgets h3:after, #home-widgets .widget-title:after { display: none; }
+@media (min-width: 768px) { #home-widgets #lsx-testimonials-slider { margin-left: 16.66667%; margin-right: 16.66667%; width: 66.66667%; } }
 
-.content-area, .widget-area { font-weight: 300; }
+#home-widgets #lsx-testimonials-slider .slick-arrow { display: none; }
+
+#home-widgets #lsx-testimonials-slider .slick-dots { margin-bottom: -7.2rem; margin-top: 7.2rem; opacity: 0.5; }
+
+@media (min-width: 992px) { #home-widgets #lsx-testimonials-slider .slick-dots > li { padding: 0 5px; } }
+
+#home-widgets #lsx-testimonials-slider .slick-dots > li > button { border-radius: 50%; height: 10px; padding: 0; width: 10px; }
+
+@media (min-width: 992px) { #home-widgets #lsx-testimonials-slider .slick-dots > li > button { height: 10px; } }
+
+#home-widgets .lsx-testimonials-slot { margin-top: 0; }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-avatar { float: left; height: 72px; margin: 0; width: 72px; }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-content { border: none; border-radius: 0; font-size: 12px; margin: 0 0 2.8rem calc(72px + 20px); padding: 0; text-align: left; width: auto; }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-content:before { display: none; }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-content p { line-height: 1.8; }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-title { display: none; }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-byline { display: block; font-size: 14px; font-weight: bold; margin: 0 0 0 calc(72px + 20px); }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-byline > .fa, #home-widgets .lsx-testimonials-slot .lsx-testimonials-byline > .lsx-testimonials-meta { display: none; }
+
+#home-widgets .lsx-testimonials-slot .lsx-testimonials-byline > span { font-weight: 300; }
 
 /*# sourceMappingURL=maps/custom.css.map */
