--- a/assets/css/scss/_typography.scss
+++ b/assets/css/scss/_typography.scss
@@ -4,14 +4,17 @@ h1, h2, h3, h4, h5, h6,
 	text-transform: uppercase;
 }
 
-h1, .h1 {
+h1, .h1,
+h4, .h4 {
 	font-size: 44px;
 	font-weight: 900;
 }
 
 h3, .h3 { font-size: 24px; }
 
-h2, h3, h4, h5, h6,
-.h2, .h3, .h4, .h5, .h6 {
+h4, .h4 { font-size: 20px; }
+
+h2, h3, h5, h6,
+.h2, .h3, .h5, .h6 {
 	font-weight: normal;
 }
