--- a/assets/css/scss/_content-aepo.scss
+++ b/assets/css/scss/_content-aepo.scss
@@ -158,6 +158,9 @@
 }
 
 .aepo-entry-slot {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
