--- a/assets/css/custom-rtl.css
+++ b/assets/css/custom-rtl.css
@@ -125,9 +125,10 @@ h2, h3, h5, h6, .h2, .h3, .h5, .h6 { font-weight: normal; }
 
 @media (min-width: 768px) { #home-widgets > .widget .aepo-client + .aepo-client { margin-top: 0; } }
 
-#home-widgets > .widget .aepo-client a { background-position: center center; background-repeat: no-repeat; display: inline-block; opacity: 0.35; text-indent: -9999px; }
+#home-widgets > .widget .aepo-client a { background-position: center center; background-repeat: no-repeat; display: inline-block; text-indent: -9999px; }
 
-#home-widgets > .widget .aepo-client a:hover { opacity: 1; }
+@media (min-width: 992px) { #home-widgets > .widget .aepo-client a { opacity: 0.35; }
+  #home-widgets > .widget .aepo-client a:hover { opacity: 1; } }
 
 #home-widgets > .widget .aepo-client-fox a { background-image: url(../images/fox_logo@2x.png); background-size: 115px 38px; height: 38px; width: 115px; }
 
