styles: homepage widgets

--- a/assets/css/scss/_buttons.scss
+++ b/assets/css/scss/_buttons.scss
@@ -6,7 +6,7 @@
 			box-shadow: none;
 			font-weight: normal;
 			left: 0;
-			min-width: 220px;
+			min-width: 220px; // design
 			top: 0;
 		}
 	}
