--- a/assets/css/custom-rtl.css
+++ b/assets/css/custom-rtl.css
@@ -41,19 +41,27 @@ h3, .h3 { font-family: 'Avenir Book'; }
 
 #comments .media-list .media .media-heading { font-family: 'Helvetica Neue'; }
 
+.aepo-slider-slide-tagline { font-family: 'Avenir'; }
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { letter-spacing: 5px; text-transform: uppercase; }
 
-h1, .h1, h4, .h4 { font-size: 44px; font-weight: 900; }
+h1, .h1 { font-size: 44px; }
+
+h2, .h2 { font-size: 44px; }
 
 h3, .h3 { font-size: 24px; }
 
 h4, .h4 { font-size: 20px; }
 
-h2, h3, h5, h6, .h2, .h3, .h5, .h6 { font-weight: normal; }
+h1, .h1, h2, .h2, h4, .h4 { font-weight: 900; }
+
+h3, h5, h6, .h3, .h5, .h6 { font-weight: normal; }
 
 .lsx .btn, .lsx .btn:active, .lsx .btn:visited { box-shadow: none; font-weight: normal; right: 0; min-width: 220px; top: 0; }
 
 .btn.cta-btn, .btn.cta-btn:active, .btn.cta-btn:visited { font-weight: 900; }
+
+#masthead { box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); }
 
 @media (min-width: 1200px) { #masthead > .container { min-height: 72px; } }
 
@@ -66,17 +74,17 @@ h2, h3, h5, h6, .h2, .h3, .h5, .h6 { font-weight: normal; }
   #masthead .primary-navbar > .nav > .menu-item > a, #masthead .primary-navbar > .nav > .menu-item.active > a { font-size: 12px; }
   #masthead .primary-navbar > .nav > .menu-item.active > a { font-weight: bold; } }
 
-.content-info { font-size: 10px; letter-spacing: 1.5px; padding: 7rem 0 10rem 0; }
+.content-info { font-size: 10px; letter-spacing: 1.5px; padding: 7.2rem 0 10rem 0; }
 
 .content-info > .container > .row > div[class*='col-'] { display: block; }
 
 .content-info .credit.credit-float { text-align: center; }
 
-.content-info .credit:before { background: transparent url("../images/logo-footer@2x.png") no-repeat center center; background-size: 28px 26px; content: ''; display: block; height: 26px; margin-bottom: 3.5rem; margin-right: calc(50% - 14px); width: 28px; }
+.content-info .credit:before { background: transparent url("../images/logo-footer@2x.png") no-repeat center center; background-size: 28px 26px; content: ''; display: block; height: 26px; margin-bottom: 3.6rem; margin-right: calc(50% - (28px / 2)); width: 28px; }
 
 .footer-navigation { text-transform: uppercase; }
 
-.footer-navigation > ul { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; padding: 3.5rem 0 0 0; }
+.footer-navigation > ul { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; padding: 3.6rem 0 0 0; }
 
 .footer-navigation > ul > li { padding-right: 15px; padding-left: 15px; }
 
@@ -96,6 +104,30 @@ h2, h3, h5, h6, .h2, .h3, .h5, .h6 { font-weight: normal; }
 
 .content-area, .widget-area { font-weight: 300; }
 
+.aepo-slider .slick-arrow { background: transparent; border: none; border-radius: 50%; font: 0/0 a; height: 50px; padding: 0; position: absolute; text-shadow: none; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 50px; z-index: 3; }
+
+.aepo-slider .slick-arrow:before { content: ''; display: block; height: 50px; width: 50px; background: transparent url(../images/sprite-arrows@2x.png) no-repeat 100% 0; background-size: 100px 100px; }
+
+.aepo-slider .slick-arrow.slick-prev { right: 3rem; }
+
+.aepo-slider .slick-arrow.slick-prev:before { background-position: 100% 0; }
+
+.aepo-slider .slick-arrow.slick-prev:hover:before { background-position: 100% -50px; }
+
+.aepo-slider .slick-arrow.slick-next { left: 3rem; }
+
+.aepo-slider .slick-arrow.slick-next:before { background-position: -50px 0; }
+
+.aepo-slider .slick-arrow.slick-next:hover:before { background-position: -50px -50px; }
+
+.aepo-slider-slide-content-wrapper { background: transparent url(../images/main@2x.png) no-repeat center center; background-size: cover; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; min-height: 50vh; }
+
+@media (min-width: 1200px) { .aepo-slider-slide-content-wrapper { min-height: 660px; } }
+
+.aepo-slider-slide-content { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; padding: 7.2rem calc(3rem + 50px + 10px); text-align: center; width: 100%; }
+
+.aepo-slider-slide-tagline { font-size: 24px; font-weight: 300; letter-spacing: 5px; }
+
 #home-widgets > .widget .aepo-buttons-wrapper { margin-top: 5rem; }
 
 @media (max-width: 767px) { #home-widgets > .widget .aepo-buttons-wrapper .text-left, #home-widgets > .widget .aepo-buttons-wrapper .text-right { text-align: center; }
@@ -105,17 +137,17 @@ h2, h3, h5, h6, .h2, .h3, .h5, .h6 { font-weight: normal; }
 
 @media (max-width: 767px) { #home-widgets > .widget .aepo-usp-wrapper [class*="col-"] + [class*="col-"] { margin-top: 0; } }
 
-#home-widgets > .widget .aepo-usp { margin-bottom: 6rem; margin-top: 6rem; padding-right: 75px; position: relative; }
+#home-widgets > .widget .aepo-usp { margin-bottom: 6rem; margin-top: 6rem; padding-right: 80px; position: relative; }
 
-#home-widgets > .widget .aepo-usp:before { background-position: center center; background-repeat: no-repeat; bottom: 0; content: ''; right: 0; position: absolute; top: 0; width: 60px; }
+#home-widgets > .widget .aepo-usp:before { background: transparent url(../images/sprite-usp@2x.png) no-repeat 100% 0; background-size: 84px 73px; bottom: 0; content: ''; right: 0; position: absolute; top: 0; }
 
-#home-widgets > .widget .aepo-usp-contractor:before { background-image: url(../images/contractor_icn@2x.png); background-size: 31px 39px; }
+#home-widgets > .widget .aepo-usp-contractor:before { background-position: 100% -28px; height: 39px; margin-right: 14.5px; margin-top: -19.5px; top: 50%; width: 31px; }
 
-#home-widgets > .widget .aepo-usp-fleet:before { background-image: url(../images/fleet_icn@2x.png); background-size: 42px 42px; }
+#home-widgets > .widget .aepo-usp-fleet:before { background-position: -31px -31px; height: 42px; margin-right: 9px; margin-top: -21px; top: 50%; width: 42px; }
 
-#home-widgets > .widget .aepo-usp-camera:before { background-image: url(../images/camera_icn@2x.png); background-size: 51px 28px; }
+#home-widgets > .widget .aepo-usp-camera:before { background-position: 100% 0; height: 28px; margin-right: 4.5px; margin-top: -14px; top: 50%; width: 51px; }
 
-#home-widgets > .widget .aepo-usp-helmet:before { background-image: url(../images/helmet_icn@2x.png); background-size: 33px 31px; }
+#home-widgets > .widget .aepo-usp-helmet:before { background-position: -51px 0; height: 31px; margin-right: 13.5px; margin-top: -15.5px; top: 50%; width: 33px; }
 
 #home-widgets > .widget .aepo-client-wrapper { margin-top: 7.2rem; text-align: center; }
 
@@ -144,32 +176,32 @@ h2, h3, h5, h6, .h2, .h3, .h5, .h6 { font-weight: normal; }
 
 .aepo-posts-wrapper .row [class*="col-"] { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; }
 
-.aepo-entry-slot { background-position: center center; background-repeat: no-repeat; background-size: cover; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-top: 20px; min-height: 300px; padding: 20px; position: relative; text-align: center; width: 100%; }
+.aepo-post-slot { background-position: center center; background-repeat: no-repeat; background-size: cover; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-top: 20px; min-height: 300px; padding: 20px; position: relative; text-align: center; width: 100%; }
 
-.aepo-posts-wrapper [class*="col-"]:first-child .aepo-entry-slot { margin-top: 0; }
+.aepo-posts-wrapper [class*="col-"]:first-child .aepo-post-slot { margin-top: 0; }
 
-@media (min-width: 992px) { .aepo-entry-slot { transition: -webkit-transform 250ms ease-in-out; transition: transform 250ms ease-in-out; transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out; }
-  .aepo-entry-slot:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
-  .aepo-entry-slot:hover:before { background-color: rgba(0, 0, 0, 0.3); } }
+@media (min-width: 992px) { .aepo-post-slot { transition: -webkit-transform 250ms ease-in-out; transition: transform 250ms ease-in-out; transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out; }
+  .aepo-post-slot:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
+  .aepo-post-slot:hover:before { background-color: rgba(0, 0, 0, 0.3); } }
 
-@media (min-width: 992px) { .aepo-entry-slot { margin-top: 0; } }
+@media (min-width: 992px) { .aepo-post-slot { margin-top: 0; } }
 
-.aepo-entry-slot:before { bottom: 0; content: ''; background-color: rgba(0, 0, 0, 0.3); right: 0; position: absolute; left: 0; top: 0; }
+.aepo-post-slot:before { bottom: 0; content: ''; background-color: rgba(0, 0, 0, 0.3); right: 0; position: absolute; left: 0; top: 0; }
 
-@media (min-width: 992px) { .aepo-entry-slot:before { background-color: rgba(0, 0, 0, 0.1); transition: background-color 250ms ease-in-out; } }
+@media (min-width: 992px) { .aepo-post-slot:before { background-color: rgba(0, 0, 0, 0.1); transition: background-color 250ms ease-in-out; } }
 
-.aepo-entry-slot > * { position: relative; width: 100%; }
+.aepo-post-slot > * { position: relative; width: 100%; }
 
-@media (min-width: 992px) { .aepo-entry-date, .aepo-entry-content, .aepo-entry-read-more { display: none; }
-  .aepo-entry-slot:hover .aepo-entry-date, .aepo-entry-slot:hover .aepo-entry-content, .aepo-entry-slot:hover .aepo-entry-read-more { display: block; } }
+@media (min-width: 992px) { .aepo-post-date, .aepo-post-content, .aepo-post-read-more { display: none; }
+  .aepo-post-slot:hover .aepo-post-date, .aepo-post-slot:hover .aepo-post-content, .aepo-post-slot:hover .aepo-post-read-more { display: block; } }
 
-h4.aepo-entry-title { margin-bottom: 0; }
+h4.aepo-post-title { margin-bottom: 0; }
 
-.aepo-entry-date { font-weight: 500; margin-bottom: 5px; opacity: 0.5; }
+.aepo-post-date { font-weight: 500; margin-bottom: 5px; opacity: 0.5; }
 
-.aepo-entry-content { font-weight: normal; }
+.aepo-post-content { font-weight: normal; }
 
-.aepo-entry-read-more { font-weight: 700; margin-top: 20px; text-transform: uppercase; }
+.aepo-post-read-more { font-weight: 700; margin-top: 20px; text-transform: uppercase; }
 
 #lsx-testimonials-slider { margin-top: 7.2rem; }
 
