--- a/assets/css/scss/_typography.scss
+++ b/assets/css/scss/_typography.scss
@@ -1,20 +1,22 @@
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-	letter-spacing: 5px;
+	letter-spacing: $letter-spacing-large;
 	text-transform: uppercase;
 }
 
+h1, .h1 { font-size: $header-h1-size; }
+
+h2, .h2 { font-size: $header-h2-size; }
+
+h3, .h3 { font-size: $header-h3-size; }
+
+h4, .h4 { font-size: $header-h4-size; }
+
 h1, .h1,
-h4, .h4 {
-	font-size: 44px;
-	font-weight: 900;
-}
+h2, .h2,
+h4, .h4 { font-weight: 900; }
 
-h3, .h3 { font-size: 24px; }
-
-h4, .h4 { font-size: 20px; }
-
-h2, h3, h5, h6,
-.h2, .h3, .h5, .h6 {
+h3, h5, h6,
+.h3, .h5, .h6 {
 	font-weight: normal;
 }
