--- a/assets/css/scss/_content-aepo-banner.scss
+++ b/assets/css/scss/_content-aepo-banner.scss
@@ -54,7 +54,7 @@
 }
 
 .aepo-slider-slide-content-wrapper {
-	background: transparent url(../images/main@2x.png) no-repeat center center;
+	background: transparent url(../images/main@2x.jpg) no-repeat center center;
 	background-size: cover;
 	display: flex;
 	flex-direction: row;
